UI FIX for searching UUIDs in implementer's tools(e.g. concepts, personattributetype) and better readability of data (#334)

--- a/packages/apps/esm-implementer-tools-app/src/implementer-tools.styles.scss
+++ b/packages/apps/esm-implementer-tools-app/src/implementer-tools.styles.scss
@@ -10,11 +10,8 @@
   @include carbon--type-style("productive-heading-02");
 }
 
-.popupTriggerButton {
-  height: 25px !important;
-  width: 25px !important;
-  position: relative;
-  border-radius: 2px;
+.bodyShort01 {
+  @include carbon--type-style("body-short-01");
 }
 
 .toolStyles {
